# nitrokey-sys-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
.builds/: archlinux.yml
patches/: deprecated.diff  remove-uint.diff  series
src/: ffi.rs  lib.rs
