[package]
name = "nitrokey-sys"
version = "3.6.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
homepage = "https://code.ireas.org/nitrokey-rs/"
repository = "https://git.sr.ht/~ireas/nitrokey-sys-rs"
description = "Low-level bindings to libnitrokey for communication with Nitrokey devices"
categories = ["external-ffi-bindings"]
license = "LGPL-3.0"
links = "nitrokey"
build = "build.rs"
readme = "README.md"

[build-dependencies]
bindgen = { version = "0.55.1", optional = true, default-features = false }
cc = "1.0"

[features]
default = []
